# sentinel-leaf-classifier

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
ltm/: data.py  features.py  models.py
notebooks/: 0-ground-truth.ipynb  1-band-importance.ipynb  2-compositing.ipynb  3-hyperparameter-tuning.ipynb  4-generalization.ipynb
src/slc/: __init__.py  data.py  features.py  models.py  visualize.py
test/: ruff.toml  test_data.py  test_features.py  test_models.py  test_visualize.py
